# machinelearning

./: .gitignore  Cargo.toml  GEMINI.md  README.md  quantization.toml  struct.toml
architectures/: CHANGELOG.md  Cargo.toml  bootstrap.ps1
architectures/main/src/api/: mod.rs
architectures/main/src/core/: mod.rs
architectures/main/src/saf/: mod.rs
architectures/src/api/: mod.rs  traits.rs
architectures/src/core/models/: mod.rs  sub_backward.rs  transformer.rs
architectures/src/core/pipeline/: candle.rs  dataloader.rs  dataset.rs  scaler.rs  scaler_type.rs
architectures/src/gateway/: mod.rs
architectures/tests/: grad_check_test.rs  lstm_int_test.rs  nbeats_test.rs  tcn_test.rs  training_test.rs
justembed/: CLAUDE.md  Cargo.toml
justembed/conversion/src/api/: traits.rs  types.rs
justembed/conversion/src/core/: mod.rs
justembed/docs/: threat_model.md
justembed/docs/3-design/: architecture.md
justembed/docs/4-development/: backlog.md
justembed/docs/7-operations/benchmarks/: baseline.md
justembed/frontend/0-ideation/: CLAUDE.md  weights_analyzer.html  weightscope-openapi.yaml
justembed/systemd/: Cargo.toml  build.rs
justembed/systemd/proto/: embed.proto
justembed/systemd/src/api/: config.rs  mod.rs  proto.rs
justembed/systemd/src/core/: config.rs  embed.rs  grpc_dispatch.rs  grpc_handler.rs  grpc_inbound.rs  grpc_server.rs  mod.rs  router.rs  state.rs
justembed/systemd/src/saf/: mod.rs
justembed/systemd/tests/: grpc_embed_int_test.rs  grpc_health_int_test.rs
llm/daemon/: Cargo.toml
llm/quantize/: Cargo.toml  struct.toml
llminference/: BACKLOG.md  Cargo.toml  README.md
llminference/main/config/: application.toml
llmmodel/: Cargo.toml
llmmodel/arch/gemma3/: Cargo.toml
llmmodel/arch/gemma4/: Cargo.toml
llmmodel/arch/gpt2/: Cargo.toml
llmmodel/cli/: Cargo.toml
llmmodel/cli/src/: main.rs
llmmodel/download/: Cargo.toml
llmmodel/download/src/: lib.rs
llmmodel/download/src/api/: error.rs  traits.rs  types.rs
llmmodel/io/: Cargo.toml
llmmodel/io/src/core/: custom_bin_store.rs  safetensors_store.rs
llmmodel/io/src/saf/: mod.rs
llmmodel/kernel/: Cargo.toml
llmmodel/loader/: Cargo.toml
llmmodel/loader/src/core/: default_loader.rs  warmup.rs
llmmodel/weights/: Cargo.toml
llmmodel/weights/src/: lib.rs
llmmodel/weights/src/core/: default_weight_guard.rs  gpt2_mapper.rs
llmodel/llmmodel/tokenizer/: Cargo.toml
llmserv/: BACKLOG.md  Cargo.toml  README.md
llmserv/.cargo/: config.toml
llmserv/main/config/: application.toml
llmserv/main/features/cli/: Cargo.toml
llmserv/main/features/daemon/: Cargo.toml
llmserv/main/features/ffi/: Cargo.toml  README.md  build.rs  cbindgen.toml
llmserv/main/features/systemd/: Cargo.toml
llmserve/: Cargo.toml  README.md  bootstrap.ps1  bootstrap.sh
llmserve/.cargo/: config.toml
llmserve/docs/7-operations/compliance/: structural_audit_report_20260422_220429.json  structural_audit_report_20260422_221543.json
llmserve/llamacpp/: Cargo.toml
llmserve/llamacpp/src/core/: model.rs
llmserve/llamacpp/tests/: diff_logits.py  dump_logits_int_test.rs  parity_int_test.rs
llmserve/llmmodel/: Cargo.toml
llmserve/llmmodel/arch/llama/: Cargo.toml
llmserve/llmmodel/arch/mixtral/: Cargo.toml
llmserve/llmmodel/arch/nomic_bert/: Cargo.toml
llmserve/llmmodel/cli/src/: main.rs
llmserve/llmmodel/layers/: Cargo.toml
llmserve/llmmodel/model/: Cargo.toml
llmserve/llmmodel/quantizer/: Cargo.toml
llmserve/src/api/: mod.rs  traits.rs  types.rs
llmserve/src/core/: mod.rs
llmserve/src/gateway/: mod.rs
main/features/architectures/: Cargo.toml  bootstrap.sh
main/features/cli/: Cargo.toml
main/features/embedding/: Cargo.toml
main/features/nn-layer/: Cargo.toml
main/features/normalization/: Cargo.toml
main/features/training/: CHANGELOG.md  Cargo.toml
ml-sdk/: Cargo.toml
ml-sdk/swets/tests/: grad_check_test.rs  training_test.rs
quantization/quant-rs/: CHANGELOG.md  Cargo.toml  README.md
quantization/quant-rs/docs/: README.md  quantization_concepts.md
tensor-engine/: CHANGELOG.md  Cargo.toml
tensor-engine/docs/0-ideation/: growth-roadmap.md  market-research.md
tensor-engine/docs/1-requirements/: edge-training-srs.md
tensor-engine/examples/: basic_tensor.rs
tensor-engine/main/src/: lib.rs
tensor-engine/src/: lib.rs
tensor-engine/src/api/: config_ops.rs  device.rs  dtype.rs  error.rs  mod.rs  opt_profile_def.rs  pool_ops.rs  quant_config_builder_def.rs  quant_config_def.rs  quant_ops.rs  shape.rs  tensor_def.rs  tensor_ops.rs  traits.rs
tensor-engine/src/gateway/: input.rs  output.rs
tensor-engine/src/saf/: mod.rs  types.rs  wrappers.rs
tensor-engine/tests/: config_e2e_test.rs  config_ops_e2e_test.rs  def_e2e_test.rs  device_e2e_test.rs  dtype_e2e_test.rs  error_e2e_test.rs  fixtures_e2e_test.rs  math_e2e_test.rs  ops_e2e_test.rs  opt_profile_def_e2e_test.rs  opt_profile_e2e_test.rs  pool_ops_e2e_test.rs  pool_ops_test.rs  quant_config_builder_def_e2e_test.rs  quant_config_def_e2e_test.rs  quant_e2e_test.rs  quant_ops_e2e_test.rs  randn_bench_test.rs  randn_isolate_test.rs  runtime_config_e2e_test.rs  shape_e2e_test.rs  storage_def_e2e_test.rs  storage_e2e_test.rs  strategy_builder_e2e_test.rs  strategy_e2e_test.rs  target_e2e_test.rs  tensor_builder_def_e2e_test.rs  tensor_builder_e2e_test.rs  tensor_e2e_test.rs  tensor_ops_e2e_test.rs  tensor_pool_e2e_test.rs  traits_e2e_test.rs  types_e2e_test.rs  views_e2e_test.rs  wrappers_e2e_test.rs
tensor-engine/tests/fixtures/: gbpjpy_h1_10000.csv
training-engine/: Cargo.toml  README.md  bootstrap.ps1
training-engine/docs/: overview.md
training-engine/examples/: basic_forward.rs
training-engine/src/: lib.rs
training-engine/src/api/: error.rs  layer.rs  loss.rs  mod.rs  optim.rs  optimizer.rs  tensor.rs  tensor_id.rs  traits.rs
training-engine/src/core/: mod.rs
training-engine/src/gateway/: input.rs  output.rs
training-engine/src/saf/: mod.rs
training-engine/tests/: backward_op_test.rs  conv1d_builder_test.rs  lstm_test.rs  mse_loss_test.rs  optim_test.rs  tensor_int_test.rs
(+1268 files in other folders)
