[workspace]
resolver = "2"
members = [
    # Foundations — consumed by llmserv workspace and any future workspaces.
    "main/features/tensor",
    "main/features/normalization",
    "main/features/activation",
    "main/features/embedding/conversion",
    "main/features/architectures",
    "main/features/training",
    # Developer tools — build-time utilities, not runtime.
    # Note: devtools/quantize depends on llmserv crates (quantizer, gguf, model)
    # via cross-workspace path deps. This is the single backward arrow we
    # accept, because it's a tool, not a library.
    "devtools/quantize",
]
exclude = ["llmserv", "llmmodel"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["phdsystems <developer@phdsystems.com>"]
repository = "https://github.com/sweengineeringlabs/machinelearning"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
# Async
tokio = { version = "1", features = ["full"] }
# Error handling
thiserror = "2"
anyhow = "1"
# CLI
clap = { version = "4", features = ["derive"] }
# Utilities
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
dirs = "6"
# HTTP
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
# Testing
approx = "0.5"
# Logging
log = "0.4"
env_logger = "0.11"
# Shared low-level crates
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
half = { version = "2.3", features = ["bytemuck"] }
rayon = "1.8"
memmap2 = "0.9"
crc32fast = "1.3"
hf-hub = "0.4"
smallvec = { version = "1.11", features = ["const_generics"] }
safetensors = "0.3"
tokenizers = "0.21"
swe-readline = { path = "../swebash/swe-readline" }

# Foundation crates (in this workspace)
swe-ml-tensor        = { path = "main/features/tensor" }
swe-ml-normalization = { path = "main/features/normalization" }
swe-ml-activation    = { path = "main/features/activation" }
swe-ml-embedding     = { path = "main/features/embedding/conversion" }
swe-ml-architectures = { path = "main/features/architectures" }
swe-ml-training      = { path = "main/features/training" }

# Cross-workspace deps to llmmodel — used by devtools/quantize.
swe-llmmodel-download = { path = "llmmodel/download" }
swe-llmmodel-io       = { path = "llmmodel/io" }
swe-llmmodel-weights  = { path = "llmmodel/weights" }
swe-llmmodel-kernel   = { path = "llmmodel/kernel" }
swe-llmmodel-layers   = { path = "llmmodel/layers" }
swe-llmmodel-gguf     = { path = "llmmodel/gguf" }
swe-llmmodel-model    = { path = "llmmodel/model" }
swe-llmmodel-tokenizer = { path = "llmmodel/tokenizer" }
swe-llmmodel-quantizer = { path = "llmmodel/quantizer" }

# Cross-workspace deps to llmserv — used only by devtools/quantize.
# devtools is a tool, so the backward arrow is acceptable.
swe-inference-thread-config = { path = "llmserv/main/features/inference/thread-config" }

[profile.release]
lto = "thin"
