[package]
name = "architectures"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Model architectures - LSTM, Transformer, TCN, N-BEATS, and time series data pipeline"

[lib]
path = "main/src/lib.rs"

[dependencies]
training-engine.workspace = true
tensor-engine.workspace = true
thiserror.workspace = true
rand.workspace = true
log.workspace = true
smallvec.workspace = true

[dev-dependencies]
approx.workspace = true
