[workspace]
resolver = "2"
members = [
    "conversion",
    "systemd",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["phdsystems <developer@phdsystems.com>"]
repository = "https://github.com/sweengineeringlabs/machinelearning"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async
tokio = { version = "1", features = ["full"] }
# HTTP
axum = { version = "0.8", features = ["json"] }
# CLI
clap = { version = "4", features = ["derive"] }
# Logging
log = "0.4"
env_logger = "0.11"

# Cross-workspace foundations
swe-ml-tensor        = { path = "../main/features/tensor" }
swe-cli              = { path = "../main/features/cli" }

# llmmodel crates
swe-llmmodel-model           = { path = "../llmserve/llmmodel/model" }
swe-llmmodel-arch-nomic-bert = { path = "../llmserve/llmmodel/arch/nomic_bert" }
swe-llmmodel-gguf            = { path = "../llmserve/llmmodel/gguf" }
swe-llmmodel-tokenizer       = { path = "../llmserve/llmmodel/tokenizer" }
swe-llmmodel-layers          = { path = "../llmserve/llmmodel/layers" }

# Shared daemon infra (llminference)
swe-systemd = { path = "../llminference/main/features/systemd" }

# Internal
swe-ml-embedding = { path = "conversion" }
