[workspace]
resolver = "2"
members = [
    "download",
    "io",
    "weights",
    "cli",
    "kernel",
    "layers",
    "gguf",
    "model",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["phdsystems <developer@phdsystems.com>"]
repository = "https://github.com/sweengineeringlabs/machinelearning"

[workspace.dependencies]
# Error handling
thiserror = "2"
anyhow = "1"
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Async
tokio = { version = "1", features = ["full"] }
# HTTP
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
hf-hub = "0.4"
# Paths
dirs = "6"
# CLI
clap = { version = "4", features = ["derive"] }
# Binary I/O
memmap2 = "0.9"
crc32fast = "1.3"
safetensors = "0.3"
# Numerics / SIMD kernels
bytemuck = { version = "1", features = ["extern_crate_alloc"] }
half = { version = "2.3", features = ["bytemuck"] }
rayon = "1.8"
log = "0.4"
# Test utilities
approx = "0.5"

# Cross-workspace foundations (from root workspace)
swe-ml-tensor        = { path = "../main/features/tensor" }
swe-ml-normalization = { path = "../main/features/normalization" }

# Internal (llmmodel) crates
swe-llmmodel-download = { path = "download" }
swe-llmmodel-io       = { path = "io" }
swe-llmmodel-weights  = { path = "weights" }
swe-llmmodel-kernel   = { path = "kernel" }
swe-llmmodel-layers   = { path = "layers" }
swe-llmmodel-gguf     = { path = "gguf" }
swe-llmmodel-model    = { path = "model" }
