[package]
name = "ml-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ML SDK - foundational building blocks: autograd tensors, layers, optimizers, losses, ops"

[lib]
path = "main/src/lib.rs"

[dependencies]
tensor-engine.workspace = true
thiserror.workspace = true
rand.workspace = true
log.workspace = true
smallvec.workspace = true

[dev-dependencies]
approx.workspace = true
