[package]
name = "tensor-engine"
version = "0.1.2"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.93"
authors.workspace = true
description = "Shared tensor engine - multi-dtype tensors with SIMD-accelerated operations"

[lib]
path = "src/lib.rs"

[dependencies]
thiserror.workspace = true
rand.workspace = true
rand_distr = "0.4"
half.workspace = true
bytemuck.workspace = true
rayon.workspace = true
smallvec.workspace = true
memmap2.workspace = true
faer = "0.20"
log.workspace = true
serde.workspace = true
toml = "0.8"

[dev-dependencies]
approx.workspace = true

[package.metadata.struct-engine]
application_type = "lib"
