[package]
name = "training-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.93"
authors.workspace = true
description = "Training engine - autograd, layers, optimizers, losses, and backward ops built on tensor-engine"
keywords = ["machine-learning", "autograd", "tensor", "neural-network", "deep-learning"]
categories = ["science", "mathematics"]

[lib]
path = "src/lib.rs"

[package.metadata.struct-engine]
application_type = "lib"

[dependencies]
tensor-engine.workspace = true
thiserror.workspace = true
rand.workspace = true

[dev-dependencies]
approx.workspace = true
