[package]
name = "swe-embedding-systemd"
description = "Embedding HTTP daemon — serves /v1/embeddings"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "embed"
path = "src/bin/embed.rs"

[dependencies]
swe-ml-embedding.workspace = true
swe-ml-tensor.workspace = true
swe-llmmodel-model.workspace = true
swe-llmmodel-arch-nomic-bert.workspace = true
swe-llmmodel-gguf.workspace = true
swe-llmmodel-tokenizer.workspace = true
swe-llmmodel-layers.workspace = true
axum.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
env_logger.workspace = true
swe-systemd.workspace = true
swe-cli.workspace = true
