[package]
name = "swellmd"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "HTTP daemon for RustML LLM inference — serves OpenAI-compatible completions API"

[lib]
path = "main/src/lib.rs"

[[bin]]
name = "swellmd"
path = "main/src/bin/serve.rs"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
log.workspace = true
env_logger.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
rayon.workspace = true
swe-ml-tensor.workspace = true
rustml-nn.workspace = true
rustml-nlp.workspace = true
rustml-hub.workspace = true
rustml-gguf.workspace = true
rustml-tokenizer.workspace = true
tokio-stream = "0.1"
futures-util.workspace = true

[dev-dependencies]
reqwest.workspace = true
