[package]
name = "swe-llmmodel-cli"
description = "llmmodel CLI — download, list, and inspect cached models"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "llmmodel"
path = "src/main.rs"

[dependencies]
swe-llmmodel-download.workspace = true
swe-cli.workspace = true
clap.workspace = true
anyhow.workspace = true
serde_json.workspace = true
