[package]
name = "swe-llmmodel-download"
description = "Model download and cache — HuggingFace Hub client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
reqwest.workspace = true
hf-hub.workspace = true
dirs.workspace = true
