[package]
name = "swe-llmmodel-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "LLM inference kernels — quantized matmul, dot products, SIMD (AVX2/FMA/SSE/NEON)"

[lib]
path = "main/src/lib.rs"

[dependencies]
thiserror.workspace = true
bytemuck.workspace = true
half.workspace = true
rayon.workspace = true
log.workspace = true

[dev-dependencies]
approx.workspace = true
