[package]
name = "swe-llmmodel-loader"
description = "End-to-end model loader — composes download, io, weights, tokenizer, quantizer, and architectures into a ready-to-run model"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
swe-ml-tensor.workspace = true
swe-llmmodel-download.workspace = true
swe-llmmodel-io.workspace = true
swe-llmmodel-gguf.workspace = true
swe-llmmodel-model.workspace = true
swe-llmmodel-tokenizer.workspace = true
swe-llmmodel-quantizer.workspace = true
swe-llmmodel-arch-llama.workspace = true
swe-llmmodel-arch-gpt2.workspace = true
swe-llmmodel-arch-falcon.workspace = true
swe-llmmodel-arch-mixtral.workspace = true
swe-llmmodel-arch-gemma3.workspace = true
swe-llmmodel-arch-gemma4.workspace = true
swe-llmmodel-arch-bert.workspace = true
swe-llmmodel-arch-nomic-bert.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde_json.workspace = true
log.workspace = true
