[package]
name = "swe-llmserver-llamacpp"
description = "llama.cpp-backed ModelBackendLoader — architectural skeleton; llama-cpp-2 integration is a separate follow-up"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# When `llama-cpp` is off (default), the crate compiles to an empty
# shell — workspace builds stay fast and toolchain-free. When on, it
# pulls in `llama-cpp-2`, which invokes cmake + a platform C++
# toolchain to build the bundled llama.cpp sources (~5 min first
# build, ~50 MB static lib).
[features]
default = []
llama-cpp = ["dep:llama-cpp-2", "dep:encoding_rs"]

[dependencies]
swe-inference-backend-api = { path = "../llminference/main/features/inference/backend-api" }
swe-inference-generation = { path = "../llminference/main/features/inference/generation" }
swe-llmmodel-tokenizer = { path = "../llmmodel/tokenizer" }
swe-llmmodel-layers = { path = "../llmmodel/layers" }
swe-llmmodel-model = { path = "../llmmodel/model" }
swe-ml-tensor = { path = "../main/features/tensor" }
anyhow.workspace = true
log.workspace = true
llama-cpp-2 = { workspace = true, optional = true }
# Used by token_to_piece — llama-cpp-2 takes an encoding_rs Decoder.
encoding_rs = { version = "0.8", optional = true }
