[workspace]
members = [
    "main/quant-api",
    "main/quant-io",
    "main/quant-engine",
    "main/quant-packer",
    "main/quant-eval",
    "main/quant-cli",
    "main/sweetspot-finder",
]
resolver = "2"

[workspace.dependencies]
candle-core = "0.8.2"
candle-nn = "0.8.2"
candle-transformers = "0.8.2"
safetensors = "0.4.3"
memmap2 = "0.9.4"
clap = { version = "4.5", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indicatif = "0.17"
anyhow = "1.0"
bytemuck = "1.15"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"

# Internal crate dependencies
quant-api = { path = "main/quant-api" }
quant-io = { path = "main/quant-io" }
quant-engine = { path = "main/quant-engine" }
quant-packer = { path = "main/quant-packer" }
quant-eval = { path = "main/quant-eval" }
